tests/NormalTests/paczka1/small_fuzzy/89457138.err
Error in line 2: 3sx8 A211 12æ2
Error in line 6: N7kYObTx A211 90,8
Error in line 4: 7dQgFNCY A211 34,1
